--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.7",
+    "@heroicons/react": "^2.0.18",
+    "@tremor/react": "^3.11.1",
+    "country-state-city": "^3.2.1",
+    "graphql": "^16.8.1",
+    "next": "14.0.3",
+    "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "typescript": "^5"
   }
 }
